# jcpimMuilt

./: CMakeLists.txt  JcPimMultiBandV2.sln  README.md
Debug/: TestDemo.ilk  dumpfile.dmp
Debug/Band/: band0_Specifics.ini  band3_Specifics.ini
JcPimMultiBandV2/: CMakeLists.txt  ClsAnaAgN9020A.hpp  ClsSenAgU2000A.hpp  ClsSigAgN5181A.hpp  ClsVisa.hpp  ClsVnaAgE5062A.hpp  IfAnalyzer.hpp  IfInstrument.hpp  IfSensor.hpp  IfSignalSource.hpp  IfSwitch.hpp  IfVna.hpp  Interface.h  JcApi.cpp  JcApi.h  JcDbConnect.h  JcOffsetDB.cpp  JcOffsetDB.h  JcPimMultiBandV2.aps  JcPimMultiBandV2.rc  JcPimMultiBandV2.vcxproj  JcPimMultiBandV2.vcxproj.filters  JcPimObject.h  dllmain.cpp  resource.h  stdafx.cpp  stdafx.h  targetver.h
JcPimMultiBandV2/Debug/: JcPimMultiBandV2.res  vc120.idb
JcPimMultiBandV2/Debug/JcPimMultiBandV2.tlog/: CL.read.1.tlog  CL.write.1.tlog  JcPimMultiBandV2.write.1u.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
JcPimMultiBandV2/MyUtil/: JcCommonAPI.cpp  JcCommonAPI.h  JcException.cpp  JcException.h
JcPimMultiBandV2/Release/JcPimMultiBandV2.tlog/: CL.read.1.tlog  CL.write.1.tlog  JcPimMultiBandV2.lastbuildstate  JcPimMultiBandV2.write.1u.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
JcPimMultiBandV2/RohdeSchwarz/: ClsAnaRsFspSerial.cpp  ClsAnaRsFspSerial.h  ClsInstrRohdeSchwarz.h  ClsSenRsNrpz.hpp  ClsSenRsNrt.hpp  ClsSigRsSMxSerial.cpp  ClsSigRsSMxSerial.h
JcPimMultiBandV2/Switch/: ClsJcSwitch.cpp  ClsJcSwitch.h  JcMatrixSwitch.cpp  JcMatrixSwitch.h  com_io_ctl.cpp  com_io_ctl.h  hwext_matrix.ini  hwext_switch.ini  implementsetting.cpp  implementsetting.h  switch_info_dpx_sw01.h  switch_info_huawei.h  switch_info_hw_ext12.h  switch_info_hw_ext8.h  switch_info_poi.h
JcPimMultiBandV2/Tektronix/: ClsSenTekPsm.hpp  ClsSigTekTSG4000.cpp  ClsSigTekTSG4000.h
Release/: JcConfig.ini  JcOffset.db  JcOffset.db.bk  JcPimMultiBandV2.exp  JcPimMultiBandV2.lib  Key
Release/Band/: band1_Specifics.ini  band2_Specifics.ini  band4_Specifics.ini  band5_Specifics.ini  band6_Specifics.ini
TestDemo/: TestDemo.cpp  TestDemo.h  TestDemo.vcxproj  TestDemo.vcxproj.filters  stdafx.h  targetver.h
TestDemo/Debug/: TestDemo.vcxprojResolveAssemblyReference.cache  vc120.idb
x64/Debug/: JcConfig.ini  JcOffset.db  Key  (+3 more)
(+22 files in other folders)
